Add multiple nav bar items on the right side

--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -127,6 +127,21 @@
             </objects>
             <point key="canvasLocation" x="3342.7480916030531" y="-674.64788732394368"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="SSg-ZP-kez">
+            <objects>
+                <viewController id="kid-yG-Z3s" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7Mg-zG-F7S">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="QPh-9w-dmd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hjb-GU-qrn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4688" y="-259"/>
+        </scene>
         <!--Otm Root Navigation Controller-->
         <scene sceneID="FNY-Xd-HH0">
             <objects>
@@ -146,7 +161,6 @@
         <!--Otm Tab Bar Controller-->
         <scene sceneID="xYb-f9-fBp">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ESY-bq-E3D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="OtmTabBarController" id="3KR-dh-rTz" customClass="OtmTabBarController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="e9l-9x-lpX"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="75m-eo-cx8">
@@ -159,6 +173,7 @@
                         <segue destination="OBt-Sr-yLe" kind="relationship" relationship="viewControllers" id="meI-rq-lxo"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ESY-bq-E3D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1743" y="-164"/>
         </scene>
