--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-50" y="-164"/>
+            <point key="canvasLocation" x="-91" y="-155"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="CXa-Sr-NeX">
@@ -152,7 +152,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="2ou-iC-RfL">
-                                <rect key="frame" x="171" y="123" width="52" height="67"/>
+                                <rect key="frame" x="170.66666666666666" y="123" width="52" height="67"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Baltimore, MD" borderStyle="roundedRect" placeholder="123 Main Street Anywhere" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ml3-4s-J9v">
                                 <rect key="frame" x="40" y="230" width="313" height="34"/>
@@ -200,7 +200,6 @@
                         <outlet property="addressTextField" destination="ml3-4s-J9v" id="moe-hx-rz7"/>
                         <outlet property="button" destination="n6x-zH-U9m" id="Vsr-KN-aDv"/>
                         <outlet property="urlTextField" destination="nGn-C4-4JT" id="WEZ-Mh-EI9"/>
-                        <segue destination="CgR-id-dQZ" kind="show" id="yvX-FK-dDj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hjb-GU-qrn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -216,7 +215,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4bJ-cU-tSk">
-                                <rect key="frame" x="16" y="103" width="361" height="655"/>
+                                <rect key="frame" x="16" y="59" width="361" height="699"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FrB-P8-7YE">
@@ -252,10 +251,10 @@
             </objects>
             <point key="canvasLocation" x="7788.5496183206105" y="-1147.1830985915494"/>
         </scene>
-        <!--Otm Root Navigation Controller-->
+        <!--Navigation Controller-->
         <scene sceneID="FNY-Xd-HH0">
             <objects>
-                <navigationController storyboardIdentifier="OtmRootNavigationController" id="0Uq-UZ-Kcm" customClass="OtmRootNavigationController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="OtmRootNavigationController" id="0Uq-UZ-Kcm" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fkb-BJ-SXD">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
